Add --add-opens for gradle behavior change
- For tests that use jmock or reflection add appropriate java.lang and java.util
--add-opens that aren't automatically added any longer for junit tests.