@@ -45,4 +45,5 @@ jar.dependsOn(massiveCopyTask)
 
 test {
     dependsOn jar
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
 }
